--- a/cart.org
+++ b/cart.org
@@ -543,7 +543,7 @@
                  (Tcds (list (+ (- (* Cth (elt cdsrel 0)) (* Sth (elt cdsrel 1))) (or (elt cpt 0) 0))
                              (+ (+ (* Sth (elt cdsrel 0)) (* Cth (elt cdsrel 1))) (or (elt cpt 1) 0)))))
             (insert (cart--fmt-point Tcds))))))
-    ;; Rotate nodes too, if needed
+    Rotate nodes too, if needed
     (when rnds
       (goto-char (point-min))
       (while (search-forward "node" nil t)
@@ -600,6 +600,7 @@
         (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys))
 
         (let ((theta (cart--angle (elt xys 0) (elt xys 1))))
+          (message "%s" (region-active-p))
           (if (region-active-p)
               (narrow-to-region (region-beginning) (region-end))
             (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
