--- a/README.org
+++ b/README.org
@@ -144,6 +144,19 @@ I often have my tikzpicture environment setup in the following fashion so that i
         gsettings set org.gnome.desktop.interface locate-pointer true
       #+end_src
 6. Using the ":width" property (and other properties) of the png image (=pdf-tools= displays the pages as png images) to use pdf-relative coordinates to add robustness across window size changes.
+** Necessary Bugfixes
+1. Applying transformations on the following node object also modifies the content:
+   #+begin_src latex
+     \node[text width=0.175\textwidth, visible on=<1->] at (-3.973154,
+     0.890411) {\begin{block}{$Nh_{max}=1$}
+         \begin{description}
+         \item[PHB]
+           $$ h= \begin{bmatrix}0\\ 35\\ 36\end{bmatrix} $$
+         \item[QPHB]
+           $$ h= \begin{bmatrix}(0,0)\\ (0,1)\\ (1,0)\end{bmatrix} $$
+         \end{description}
+       \end{block}};
+   #+end_src
 * Recommended Reading/Interesting Repositories
 1. The [[https://pgf-tikz.github.io/pgf/pgfmanual.pdf][documentation of Tikz & PGF]].
 2. The [[https://github.com/misohena/el-easydraw][el-easydraw]] package by [[https://github.com/misohena][misohena]] is WYSIWYG implementation of SVG drawing in emacs.
