--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
 
 It must be noted that although =cart.el= improves the interaction/feedback while using Tikz, it is still not exactly WYSIWYG, since the latex file has to be compiled after each insertion of coordinates.
 
-*_Appeal to contributors_*: I am pretty new to elisp development so I'd appreciate any feedback on the package and ways to improve/standardize it. 
+*_Appeal to contributors_*: I am pretty new to elisp development so I'd appreciate any feedback on the package and ways to improve/standardize it.
 
 * Configuration
 Configuration is pretty standard. Adding these lines to your emacs startup is all that is needed:
@@ -48,7 +48,7 @@ Usage is quite straightforward. During the first time, it's recommended to follo
 
 4. *Insertion: Tikz Node*: Interactive tikz-nodes can be initiated by calling =cart-tikz-node= (default kbd: =C-x a n=). It will first prompt the user for "node options" (string options to be passed as =\node[options]=) and "node value" (string value to be passed as =\node[...] at (pt_x, pt_y) {value};=), before prompting the user to choose the point (only one point in this case).
 
-5. *Insertion: Tikz circle*: Interactive tikz-draw initiated by calling =cart-tikz-circle= (default kbd: =C-x a e=) and a circle is drawn through the two points the user clicks & drags (or clicks sequentially). The radius defaults to the mean point. 
+5. *Insertion: Tikz circle*: Interactive tikz-draw initiated by calling =cart-tikz-circle= (default kbd: =C-x a e=) and a circle is drawn through the two points the user clicks & drags (or clicks sequentially). The radius defaults to the mean point.
 
 6. *Insertion: Tikz Draw Plot Coordinates*: Interactive tikz-draw plot coordinates can be initiated by calling =cart-tikz-coordinates= (default kbd: =C-x a c=). It will first prompt the user for "draw options" (string options to be passed as =\draw[options]=) before prompting the user to start clicking the desired points. The argument =[smooth]= will be passed to plot. The selection can be stopped by triggering any event other than =down-mouse-1=(left click), hitting =RET= for example.
 
@@ -125,7 +125,7 @@ I often have my tikzpicture environment setup in the following fashion so that i
 2. Making node information for each point in draw possible as an option (instead of having to click on successive points repeatedly and have common node properties).
 3. =cart-scale-tikz= currently doesn't scales circle radius fields manually. Something more general would be better.
 4. Units are currently not supported for the node attributes (like specifying radius as =3pt=). These will be considered correctly only if provided along with a decimal point. This is an inconvenience that needs to be addressed.
-5. Some mechanism simulating real-time feedback.   
+5. Some mechanism simulating real-time feedback.
    Two ideas for this:
    1. Must experiment with *spawning a transparent frame* spanning the whole screen until the user input is done. Here's elisp code to create a transparent frame without modeline & minibuffer. Perhaps if we can invoke some emacs-native WYSIWYG drawing interface while the user clicks, this could be a solution. How expensive this will be is up for discussion.
       This becomes quite attractive from Emacs 29, which allows explicitly setting background transparency independent of the foreground as follows (following only works in emacs 29+).
@@ -157,10 +157,22 @@ I often have my tikzpicture environment setup in the following fashion so that i
          \end{description}
        \end{block}};
    #+end_src
-
+2. Translation on the following gives errors:
+   #+begin_src latex
+     \node[text width=0.6\textwidth] at (-3.4189, -3.1370) {
+       \begin{block}{Dahl Element}
+         $$ \frac{df}{du} = k_t {\left|1-\frac{f}{F_s} sgn(\dot{u})\right|}^n
+         sgn\left\right) $$
+       \end{block}};            
+   #+end_src
+3. Move point doesn't seem to work properly if there is no space between the previous "--" and the coordinate parenthesis, for example, in the following, one of the dashes in "--" gets removed if the point is moved.
+   #+begin_src latex
+     \draw[red, thick, -Latex] (2.3784, -0.6438) --(1.6351, -3.0274);
+   #+end_src
 ** Desirable features
 1. It would be nice to have a "draw shape around objects" feature.
-2. It would be good to have cart.el aware of the different "objects" in a drawing. 
+2. It would be good to have cart.el aware of the different "objects" in a drawing.
+3. Incorporate includegraphics trim into the ecosystem.
 * Recommended Reading/Interesting Repositories
 1. The [[https://pgf-tikz.github.io/pgf/pgfmanual.pdf][documentation of Tikz & PGF]].
 2. The [[https://github.com/misohena/el-easydraw][el-easydraw]] package by [[https://github.com/misohena][misohena]] is WYSIWYG implementation of SVG drawing in emacs.
@@ -175,5 +187,3 @@ time, and the code does not really “show” how things will look like.
 
 -- Tikz/PGF Manual
 #+end_quote
-
-
