Fixed minor bugs. Now detecting comment.

--- a/cart.org
+++ b/cart.org
@@ -92,8 +92,7 @@
           (cons (cart--key "t") #'cart-translate-tikz)
           (cons (cart--key "r") #'cart-rotate-tikz)
           (cons (cart--key "s") #'cart-scale-tikz)
-          (cons (cart--key "m") #'cart-tikz-move-point)
-          (cons (cart--key "k") #'cart-tikz-delete-point)))
+          (cons (cart--key "m") #'cart-tikz-move-point)))
  #+end_src
 ** Define Math utility functions
 #+begin_src emacs-lisp :tangle yes
@@ -151,49 +150,63 @@
 #+end_src
 ** Define functions for getting coordinates on screen
 #+begin_src emacs-lisp :tangle yes :results none
-  (defun cart--car-or (ARG)
-    "Return car of ARG if ARG is a cons, ARG otherwise."
-    (if (consp ARG) (car ARG) ARG))
+    (defun cart--car-or (ARG)
+      "Return car of ARG if ARG is a cons, ARG otherwise."
+      (if (consp ARG) (car ARG) ARG))
 
-  (defun cart--gmc (&optional prompt)
-    "Prompt to click on frame and return the xy coordinates.
-  Two behaviors are possible: (if clicked) single point returned as a
-  list with the two coordinates; (if dragged) start and end points of
-  dragged region returned as a list of two point-lists (as above).
+    (defun cart--gmc (&optional prompt)
+      "Prompt to click on frame and return the xy coordinates.
+        Two behaviors are possible: (if clicked) single point returned as a
+        list with the two coordinates; (if dragged) start and end points of
+        dragged region returned as a list of two point-lists (as above).
 
-  The optional parameter PROMPT allows one to specify a user-facing
-  prompt.  The prompt defaults to 'Click anywhere' if not provided."
-    (if (string-equal (cart--car-or (read-event
-                                     (or prompt "Click anywhere")))
-                      "down-mouse-1")
-        (let* ((event (read-event))  ;; read the mouse up/drag event
-               (pos (event-start event))
-               (pose (event-end event))
-               (xy (posn-x-y pos))
-               (xye (posn-x-y pose)))
-          (if (eq pos pose)
-              (mapcar 'float (list (car xy) (cdr xy)))
-            (list (mapcar 'float (list (car xy) (cdr xy)))
-                  (mapcar 'float (list (car xye) (cdr xye))))))))
+        The optional parameter PROMPT allows one to specify a user-facing
+        prompt.  The prompt defaults to 'Click anywhere' if not provided."
+      (if (string-equal (cart--car-or (read-event
+                                       (or prompt "Click anywhere")))
+                        "down-mouse-1")
+          (let* ((event (read-event))  ;; read the mouse up/drag event
+                 (pos (event-start event))
+                 (pose (event-end event))
+                 (xy (posn-x-y pos))
+                 (xye (posn-x-y pose)))
+            (if (eq pos pose)
+                (mapcar 'float (list (car xy) (cdr xy)))
+              (list (mapcar 'float (list (car xy) (cdr xy)))
+                    (mapcar 'float (list (car xye) (cdr xye))))))))
 
-  (defun cart--2dc (&optional prompt)
-    "Prompt to enter coordinates in document CS and return as list.
-  The user is prompted with the string
-   \"(PROMPT): Enter Q coordinate: \" where Q is (X,Y) and PROMPT is an
-  optional parameter."
-    (interactive)
-    (let ((x (float (read-number (format "(%s): Enter X coordinate: " (or prompt "")) 0)))
-          (y (float (read-number (format "(%s): Enter Y coordinate: " (or prompt "")) 0))))
-      (list x y)))
+    (defun cart--2dc (&optional prompt xd yd xn yn)
+      "Prompt to enter coordinates in document CS and return as list.
+        The user is prompted with the string
+         \"(PROMPT): Enter Q coordinate: \" where Q is (X,Y) and PROMPT is an
+        optional parameter.
+       XD and YD are the defaults (defaults to 0).
+       XN and YN are what X, Y should NOT be."
+      (interactive)
+      (let ((x (float (read-number (format "(%s): Enter X coordinate: "
+                                           (or prompt "")) (or xd 0))))
+            (y (float (read-number (format "(%s): Enter Y coordinate: "
+                                           (or prompt "")) (or yd 0)))))
+        (while (or (eql x xn) (eql y yn))
+          (read-char (concat
+                      (format "Choose a point such that x!=%d, y!=%d. " xn yn)
+                      (format "Given Point: (%d,%d). " x y)
+                      "Press any key to continue."))
+          (setq x (float (read-number (format "(%s): Enter X coordinate: "
+                                              (or prompt "")) (or xd 0))))
+          (setq y (float (read-number (format "(%s): Enter Y coordinate: "
+                                              (or prompt "")) (or yd 0)))))
+        (list x y)))
 #+end_src
 ** Wrapper functions for calibration
 #+begin_src emacs-lisp :tangle yes :results none
   (defun cart-calibrate ()
     "Conduct interactive calibration to set the `cart--XY_0sl' variable."
     (interactive)
-    (let* ((XY1 (cart--2dc "Point 1"))
+    (read-char "Choose two points for calibration. Press any key to continue.")
+    (let* ((XY1 (cart--2dc "Point 1" 0 0))
            (xy1 (save-excursion (cart--gmc "Click on Point 1")))
-           (XY2 (cart--2dc "Point 2"))
+           (XY2 (cart--2dc "Point 2" 1 1 (elt XY1 0) (elt XY1 1)))
            (xy2 (save-excursion (cart--gmc "Click on Point 2")))
            (Xs (mapcar #'(lambda (x) (elt x 0)) (list XY1 XY2)))
            (Ys (mapcar #'(lambda (x) (elt x 1)) (list XY1 XY2)))
@@ -203,6 +216,7 @@
            (Y_0sl (cart--xy2x0sl Ys ys)))
       (setf (alist-get 'X cart--XY_0sl) X_0sl)
       (setf (alist-get 'Y cart--XY_0sl) Y_0sl)
+      (message "Calibration done!")
       (list XY1 XY2 xy1 xy2)))
 
   (defun cart--gmp (&optional prompt)
@@ -413,7 +427,7 @@
   https://emacs.stackexchange.com/a/10405"
     (let ((p0 (point-min))
           (p1 (point-max)))
-      (LaTeX-narrow-to-environment)
+      ;; (LaTeX-narrow-to-environment)
       (let ((ppss (syntax-ppss (or pos (point)))))
         (widen)
         (narrow-to-region p0 p1)
@@ -426,16 +440,18 @@
   `cart-translate-tikz' and `cart-rotate-tikz' respectively.
   It works by requiring either that the point is at the top (not bound
   by any parens), or if bound by \"{...}\", it must belong to a
-  coordinate set (as in `cart-tikz-smooth').
+  coordinate set (as in `cart-tikz-smooth'). It also returns t if inside a comment. 
 
   Optional input parameter POS allows user to specify point (defaults to
     \"(point)\")."
-    (let ((lopa (cart--last-open-paren (or pos (point)))))
-      (if (char-equal (or lopa ?\0) ?\{)
-          (if (string-equal (save-excursion (search-backward "{")
-                                            (left-word) (word-at-point))
-                            "coordinates") nil lopa)
-        lopa)))
+    (save-excursion
+      (let ((ppss (syntax-ppss (or pos (point))))
+            (lopa (cart--last-open-paren (or pos (point)))))
+        (if (char-equal (or lopa ?\0) ?\{)
+            (if (string-equal (save-excursion (search-backward "{")
+                                              (left-word) (word-at-point))
+                              "coordinates") nil lopa)
+          (or (nth 4 ppss) lopa)))))
 
   (defun cart--goto-begend (&optional enflg)
     "Move pointer to either the beginning or end of current statement.
@@ -458,7 +474,7 @@
     (save-excursion
       (goto-char (or pos (point)))
       (let ((p0 (point))
-            (p1 (search-forward ")")))
+            (p1 (1- (search-forward ")"))))
         (mapcar 'string-to-number
                 (split-string
                  (replace-regexp-in-string
@@ -595,7 +611,7 @@
     (save-excursion
       (let* ((xyref (or (cart--gmp "Click on the center of rotation (RET to use origin) ") '(0 0)))
              (xys (cart--gmp "Click and drag the rotation target points "))
-             (rnds (y-or-n-p "Rotate Node contents too?")))
+             (rnds (y-or-n-p "Rotate node contents too?")))
         (when (numberp (elt xys 0))
           (setq xys (list xys (cart--gmp
                                "You had only clicked on one point. Please click target point now"))))
@@ -696,7 +712,7 @@
     (save-excursion
       (let* ((xyref (or (cart--gmp "Click on the center of scaling (RET to use origin) ") '(0 0)))
              (xys (cart--gmp "Click and drag the scaling target points "))
-             (snds (y-or-n-p "Scale Node contents too?")))
+             (snds (y-or-n-p "Scale node contents too?")))
         (when (numberp (elt xys 0))
           (setq xys (list xys (cart--gmp
                                "You had only clicked on one point. Please click target point now"))))
@@ -749,7 +765,7 @@
 *** Delete point
   #+begin_src emacs-lisp :tangle yes
   (defun cart-tikz-delete-point ()
-    "Delete a selected point."
+    "Delete a selected point. EXPERIMENTAL. USE AT OWN RISK."
     (interactive)
     (save-excursion
       (let ((xy (cart--gmp "Select point to delete"))
