--- a/test/test.tex
+++ b/test/test.tex
@@ -1,6 +1,7 @@
 \documentclass{beamer}
 \usetheme{Boadilla}
 
+\usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{qrcode}
 
@@ -27,7 +28,7 @@
 
   \begin{tikzpicture}[overlay,remember picture]
     \pgftransformshift{\pgfpointanchor{current page}{center}}
-    % \draw (0,0) -- (2,2);  % Used for calibration
+    \draw (0,0) -- (2,2);  % Used for calibration
     
     \draw[fill=red](-1.261745, -2.643836)circle[radius=1pt]
     --
@@ -1061,17 +1062,19 @@
   \frametitle{Test Frame 3}
   \begin{tikzpicture}[overlay,remember picture]
     \pgftransformshift{\pgfpointanchor{current page}{center}}
+
+    \draw (0,0) -- (1,1);
     
     \node[text width=0.3\textwidth, rotate=40.1543, scale=0.5268,
     visible on=<2->] at
-    (2.6015, 0.0975)
+    (1.5676, -1.0548)
     {\begin{block}{new}
-        This is a block!
+        This is a block! (2,3)
       \end{block}};
 
     \draw (-4.8919, 1.3014) .. controls (-4.4865, 2.5068) and
     (-4.4865, 2.5068) .. (-3.4595, 2.1096) .. controls(-1.3514, 2.0274) and (-3.1081, 0.7808) .. (-3.7568, -0.2740) .. controls
-    (-4.4054, -1.3288) and (-3.6351, -1.1370) ..(-1.9189, -3.4521)
+    (-4.4054, -1.3288) and (-3.6351, -1.1370) ..(-0.8784, -3.2466)
     .. controls (-1.4189, -2.3151) and (-1.3784, -1.4658) .. (-1.0946,
     -0.2740) .. controls (-0.8108, 0.9178) and (-0.6622, 1.0411)
     .. (0.3243, 0.8630) .. controls (1.3108, 0.6849) and (1.3514,
@@ -1080,8 +1083,8 @@
 
     \draw (-2.0811, -1.0548) circle[radius=0.9299];
 
-    \draw plot [smooth] coordinates {(3.2162, 3.2603) (0.8378, 3.1096)
-      (-1.2027, 3.8630) (-3.8649, 2.9863) (-4.7027, 0.8904)};
+    \draw plot [smooth] coordinates {(4.2973, 2.6575) (1.9324, 3.0137)
+      (-0.1081, 3.7671) (-2.7703, 2.8904) (-3.6081, 0.7945)};
   \end{tikzpicture}
 \end{frame}
 \end{document}
