--- a/README.org
+++ b/README.org
@@ -145,45 +145,11 @@ I often have my tikzpicture environment setup in the following fashion so that i
       #+end_src
 6. Using the ":width" property (and other properties) of the png image (=pdf-tools= displays the pages as png images) to use pdf-relative coordinates to add robustness across window size changes.
 ** Necessary Bugfixes
-1. Applying transformations on the following node objects also modifies the content because they are also within (0,1):
-   #+begin_src latex
-     \node[text width=0.175\textwidth, visible on=<1->] at (-3.973154,
-     0.890411) {\begin{block}{$Nh_{max}=1$}
-         \begin{description}
-         \item[PHB]
-           $$ h= \begin{bmatrix}0\\ 35\\ 36\end{bmatrix} $$
-         \item[QPHB]
-           $$ h= \begin{bmatrix}(0,0)\\ (0,1)\\ (1,0)\end{bmatrix} $$
-         \end{description}
-       \end{block}};
-
-     \node[visible on=<2>, text width=0.3\textwidth] at (-4.0675,
-     -1.0274) {\begin{block}{Lognormal Distribution}
-         \begin{align*}
-           k = e^{\mu_\ell+\sigma_\ell Z},\quad Z\sim \mathcal{N}(0, 1)
-         \end{align*}
-       \end{block}};
-   #+end_src
-   + Same issue, but the following example completely craps out (because of the =\left(= and =\right)=.
-     #+begin_src latex
-       \node[visible on=<2>, text width=0.3\textwidth] at (-4.0675,
-       -1.0274) {\begin{block}{Lognormal Distribution}
-           \begin{align*}
-             K &= e^{\mu_\ell+\sigma_\ell Z},\, Z\sim \\
-             \langle K\rangle &= \ln \left(\frac{\mu_\ell^2}{\sqrt{\mu_\ell^2+\sigma_\ell^2}}\right)\\
-             \langle [K]^2\rangle &= \ln \left(1+\frac{\sigma_\ell^2}{\mu_\ell^2}\right)
-           \end{align*}
-         \end{block}};
-     #+end_src
-2. Move point doesn't seem to work properly if there is no space between the previous "--" and the coordinate parenthesis, for example, in the following, one of the dashes in "--" gets removed if the point is moved.
-   #+begin_src latex
-     \draw[red, thick, -Latex] (2.3784, -0.6438) --(1.6351, -3.0274);
-   #+end_src
+No currently active bugs! ^_^
 ** Desirable features
 1. It would be nice to have a "draw shape around objects" feature.
 2. It would be good to have cart.el aware of the different "objects" in a drawing.
 3. Incorporate includegraphics trim into the ecosystem.
-4. Switch to using treesitter for everything?
 * Recommended Reading/Interesting Repositories
 1. The [[https://pgf-tikz.github.io/pgf/pgfmanual.pdf][documentation of Tikz & PGF]].
 2. The [[https://github.com/misohena/el-easydraw][el-easydraw]] package by [[https://github.com/misohena][misohena]] is WYSIWYG implementation of SVG drawing in emacs.
