--- a/test/test.tex
+++ b/test/test.tex
@@ -1075,25 +1075,62 @@
     \draw (-4.8919, 1.3014) .. controls (-4.4865, 2.5068) and
     (-4.4865, 2.5068) .. (-3.4595, 2.1096) .. controls(-1.3514, 2.0274) and (-3.1081, 0.7808) .. (-3.7568, -0.2740) .. controls
     (-4.4054, -1.3288) and (-3.6351, -1.1370) ..(-0.8784, -3.2466)
-    .. controls (-1.4189, -2.3151) and (-1.3784, -1.4658) .. (-1.0946,
-    -0.2740) .. controls (-0.8108, 0.9178) and (-0.6622, 1.0411)
+    .. controls (-1.4189, -2.3151) and (-1.3784, -1.4658) .. (-0.3836, -0.7467) .. controls (-0.8108, 0.9178) and (-0.6622, 1.0411)
     .. (0.3243, 0.8630) .. controls (1.3108, 0.6849) and (1.3514,
     0.9589) .. (1.7568, 1.9315) .. controls (2.1622, 2.9041) and
-    (2.7297, 2.1507) .. (3.4459, 1.7260);
+    (2.7297, 2.1507) .. (4.1370, -0.3600);
 
     \draw (-2.0811, -1.0548) circle[radius=0.9299];
 
     \draw plot [smooth] coordinates {(4.2973, 2.6575) (1.9324, 3.0137)
       (-0.1081, 3.7671) (-2.7703, 2.8904) (-3.6081, 0.7945)};
     
-    \node[visible on=<2>, text width=0.4\textwidth] at (-0.0945,
-    -0.0137) {\begin{block}{Lognormal Distribution}
+    \node[visible on=<2>, text width=0.4\textwidth] at (-3.3696,
+    0.2906)
+    {\begin{block}{Lognormal Distribution}
         \begin{align*}
           k = e^{\mu_\ell+\sigma_\ell Z},\quad Z\sim \mathcal{N}(0, 1)
         \end{align*}
-      \end{block}};
+      \end{block}};    
   \end{tikzpicture}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Test Frame 4}
+
+  \begin{tikzpicture}[overlay,remember picture]
+    \pgftransformshift{\pgfpointanchor{current page}{center}}    
+
+    \draw (-6.1370, -0.6400) .. controls (-5.7808, 0.9333) and
+    (-5.0959, 1.6267) .. (-3.6849, 2.5333) .. controls (-2.2740,
+    3.4400) and (-2.8493, 2.2267) .. (-3.7397, 0.4000) .. controls
+    (-4.6301, -1.4267) and (-4.1644, -0.5200) .. (-2.5890, -0.7600)
+    .. controls (-1.0137, -1.0000) and (-2.2329, 0.2533) .. (-2.4932,
+    1.4400) .. controls (-2.7534, 2.6267) and (-1.9452, 1.6933)
+    .. (-0.7123, 1.7067);
+
+    \draw plot [smooth] coordinates {(1.7123, 4.2933) (1.0685, 4.2400)
+      (0.5616, 4.1333) (1.0137, 3.8533) (1.7945, 3.8267) (1.5890,
+      3.4800) (1.0411, 3.2800) (0.5205, 3.0667) (1.3014, 2.7200)
+      (1.7534, 2.9200) (1.9589, 2.5467) (1.7123, 2.3067) (1.0548,
+      2.2800) (0.5205, 2.4267) (0.1507, 2.7333) (0.1096, 3.3333)
+      (-0.0548, 3.7333) (-0.6438, 3.7600) (-0.6027, 3.3467)};
+
+    \draw[red] plot [smooth cycle] coordinates {(-5.9315, -1.6000)
+      (-6.1096, 0.5600) (-4.6164, 2.7733) (-2.1233, 3.8267) (-1.3836,
+      2.9333) (-0.8356, 4.0400) (0.4110, 4.3867) (2.7534, 4.3200)
+      (4.6438, 2.5733) (4.9589, 0.4400) (2.0137, 0.8800) (0.4521,
+      -0.0800) (0.2192, -1.8933) (-0.8493, -3.4800) (-4.3288,
+      -3.5467)};
+
+    \draw[green!75!black] plot [smooth] coordinates {(-2.0274, -1.4000) (-1.5891,
+      -0.7467) (-0.3699, -1.0800) (-0.3973, -1.9600) (-1.1507,
+      -2.4133)
+      (-1.2329, -3.0933) (-1.0137, -3.6933)};
+    
+  \end{tikzpicture}
+\end{frame}
+
 \end{document}
 
 %%% Local Variables:
