--- a/cart.org
+++ b/cart.org
@@ -2,8 +2,7 @@
 #+STARTUP: indent
 #+LATEX_HEADER: \usepackage{tikz}
 
-* Package Elisp Code
-** Header
+* Header
 #+begin_src emacs-lisp :tangle yes
   ;;; cart.el --- CAlibrated inteRactive coordinates for Tikz       -*- lexical-binding: t; -*-
 
@@ -51,12 +50,17 @@
   ;;; Code:
   (require 'latex)
 #+end_src
-** Define Minor-Mode and Global Variables
+* Define Minor-Mode and Global Variables
 #+begin_src emacs-lisp :tangle yes :results none
   (defcustom cart--XY_0sl '((X . (0.0 1.0))
                             (Y . (0.0 1.0)))
     "These are the calibration values.
   The behavior will be identical across sessions if these are saved."
+    :type 'cons
+    :group 'cart)
+
+  (defcustom cart--visual-feedback nil
+    "Set to t to have artist-mode based visual feedback (Experimental). Works only after Emacs 29.1."
     :type 'cons
     :group 'cart)
 
@@ -72,6 +76,9 @@
 
   (defvar cart--prev-pt nil
     "Previous point inserted in current session.")
+
+  (defvar cart--vis-buffer nil
+    "Visualization buffer")
 
   (defun cart--key (key)
     "Prefix keymap-prefix to KEY and construct keybinding."
@@ -94,7 +101,7 @@
           (cons (cart--key "s") #'cart-scale-tikz)
           (cons (cart--key "m") #'cart-tikz-move-point)))
  #+end_src
-** Define Math utility functions
+* Define Math utility functions
 #+begin_src emacs-lisp :tangle yes
   (defun cart--xy2x0sl (x y)
     "Convert list of x and y points to x0 (intercept) and sl (slope).
@@ -148,66 +155,133 @@
   of the vector."
     (sqrt (apply '+ (mapcar (lambda (x) (expt x 2)) vec))))
 #+end_src
-** Define functions for getting coordinates on screen
+* Define functions for screen Interaction
+** Artist-mode based screen drawing
 #+begin_src emacs-lisp :tangle yes :results none
-    (defun cart--car-or (ARG)
-      "Return car of ARG if ARG is a cons, ARG otherwise."
-      (if (consp ARG) (car ARG) ARG))
+  (defun cart-visual-toggle (&optional op)
+    "Toggle visualization. If OP is non-nil, then visualization is enabled."
+    (interactive)
+    (setq cart--visual-feedback (not cart--visual-feedback))
+    (if cart--visual-feedback
+        (message "cart.el: Visual feedback enabled.")
+      (message "cart.el: Visual feedback disabled."))
+    )
 
-    (defun cart--gmc (&optional prompt)
-      "Prompt to click on frame and return the xy coordinates.
-        Two behaviors are possible: (if clicked) single point returned as a
-        list with the two coordinates; (if dragged) start and end points of
-        dragged region returned as a list of two point-lists (as above).
+  (defun cart--make-vis-buffer (&optional op)
+    "Cart-transparent buffer manipulation.
+     If OP is non-nil, buffer is cleared."
+    (let ((nfrm (make-frame-on-current-monitor '((fullscreen . maximized)
+                                                 (foreground-color . "blue")
+                                                 (background-color . "white")
+                                                 (cursor-color . "white")
+                                                 (alpha-background . 40)))))
+      (select-frame nfrm)
+      (toggle-frame-fullscreen)
+      (find-file "cart.el drawing buffer")
+      (artist-mode)
+      (setq-local mode-line-format nil)
+      (setq cart--vis-buffer (current-buffer))
+      ;; (artist-select-op-straight-line)
+      ;; (artist-toggle-rubber-banding)
+      )  
+    (if op (artist-clear-buffer (current-buffer))))
 
-        The optional parameter PROMPT allows one to specify a user-facing
-        prompt.  The prompt defaults to 'Click anywhere' if not provided."
-      (if (string-equal (cart--car-or (read-event
-                                       (or prompt "Click anywhere")))
-                        "down-mouse-1")
-          (let* ((event (read-event))  ;; read the mouse up/drag event
-                 (pos (event-start event))
-                 (pose (event-end event))
-                 (xy (posn-x-y pos))
-                 (xye (posn-x-y pose)))
-            (if (eq pos pose)
-                (mapcar 'float (list (car xy) (cdr xy)))
-              (list (mapcar 'float (list (car xy) (cdr xy)))
-                    (mapcar 'float (list (car xye) (cdr xye))))))))
-
-    (defun cart--2dc (&optional prompt xd yd xn yn)
-      "Prompt to enter coordinates in document CS and return as list.
-        The user is prompted with the string
-         \"(PROMPT): Enter Q coordinate: \" where Q is (X,Y) and PROMPT is an
-        optional parameter.
-       XD and YD are the defaults (defaults to 0).
-       XN and YN are what X, Y should NOT be."
-      (interactive)
-      (let ((x (float (read-number (format "(%s): Enter X coordinate: "
-                                           (or prompt "")) (or xd 0))))
-            (y (float (read-number (format "(%s): Enter Y coordinate: "
-                                           (or prompt "")) (or yd 0)))))
-        (while (or (eql x xn) (eql y yn))
-          (read-char (concat
-                      (format "Choose a point such that x!=%d, y!=%d. " xn yn)
-                      (format "Given Point: (%d,%d). " x y)
-                      "Press any key to continue."))
-          (setq x (float (read-number (format "(%s): Enter X coordinate: "
-                                              (or prompt "")) (or xd 0))))
-          (setq y (float (read-number (format "(%s): Enter Y coordinate: "
-                                              (or prompt "")) (or yd 0)))))
-        (list x y)))
+  (defun cart--vis-draw (ev)
+    "Draw the event EV using artist-mode."
+    ;; (artist-select-op-straight-line)
+    ;; (artist-mouse-draw-2points ev))
+    (artist-down-mouse-1 ev))
 #+end_src
-** Wrapper functions for calibration
+** Coordinate extraction
+#+begin_src emacs-lisp :tangle yes :results none
+  (defun cart--car-or (ARG)
+    "Return car of ARG if ARG is a cons, ARG otherwise."
+    (if (consp ARG) (car ARG) ARG))
+
+  (defun cart--gmc (&optional prompt gpers)
+    "Prompt to click on frame and return the xy coordinates.
+      Two behaviors are possible: (if clicked) single point returned as a
+      list with the two coordinates; (if dragged) start and end points of
+      dragged region returned as a list of two point-lists (as above).
+
+      The optional parameter PROMPT allows one to specify a user-facing
+      prompt.  The prompt defaults to 'Click anywhere' if not provided.
+      The optional parameter GPERS controls the behavior of the graphical
+      (transparent) buffer. The following values are possible.
+      0: No graphical feedback.
+      1: Create graphical feedback buffer.
+      2: Use the graphical feedback buffer created at a previous step.
+      3: Delete the graphical feedback buffer. "
+    (unless cart--visual-feedback (setq gpers 0))
+    ;; (when cart--visual-feedback (cart--make-vis-buffer t))
+    (let ((cbuf (current-buffer)))
+      (cond ((eql 0 (or gpers 0)))  ; do nothing
+            (t (if cart--vis-buffer
+                   (switch-to-buffer-other-frame cart--vis-buffer)
+                 (cart--make-vis-buffer t))) ; switch to vis buffer if exists
+            )
+      (let ((basev (read-event (or prompt "Click anywhere"))))
+        (when (string-equal (cart--car-or basev) "switch-frame")
+            (setq basev (read-event (or prompt "Click anywhere"))))
+        (if (string-equal (cart--car-or basev) "down-mouse-1")
+            (let* ((event (read-event))  ;; read the mouse up/drag event
+                   (pos (event-start event))
+                   (pose (event-end event))
+                   (xy (posn-x-y pos))
+                   (xye (posn-x-y pose)))
+              (when (> (or gpers 0) 0)
+                (picture-mouse-set-point (list 'down-mouse-1 (event-start event)))
+                (artist-key-set-point)
+
+                (picture-mouse-set-point (list 'down-mouse-1 (event-end event)))
+                (artist-key-set-point)
+
+                (cond ((eql 2 (or gpers 0))
+                       (switch-to-buffer-other-frame cbuf))
+                      ((eql 3 (or gpers 0))
+                       (read-char "Press any key to continue.")
+                       (delete-frame)
+                       (setq cart--vis-buffer nil))))
+              (if (eq pos pose)
+                  (mapcar 'float (list (car xy) (cdr xy)))
+                (list (mapcar 'float (list (car xy) (cdr xy)))
+                      (mapcar 'float (list (car xye) (cdr xye)))))
+              )))))
+
+  (defun cart--2dc (&optional prompt xd yd xn yn)
+    "Prompt to enter coordinates in document CS and return as list.
+      The user is prompted with the string
+       \"(PROMPT): Enter Q coordinate: \" where Q is (X,Y) and PROMPT is an
+      optional parameter.
+     XD and YD are the defaults (defaults to 0).
+     XN and YN are what X, Y should NOT be."
+    (interactive)
+    (let ((x (float (read-number (format "(%s): Enter X coordinate: "
+                                         (or prompt "")) (or xd 0))))
+          (y (float (read-number (format "(%s): Enter Y coordinate: "
+                                         (or prompt "")) (or yd 0)))))
+      (while (or (eql x xn) (eql y yn))
+        (read-char (concat
+                    (format "Choose a point such that x!=%d, y!=%d. " xn yn)
+                    (format "Given Point: (%d,%d). " x y)
+                    "Press any key to continue."))
+        (setq x (float (read-number (format "(%s): Enter X coordinate: "
+                                            (or prompt "")) (or xd 0))))
+        (setq y (float (read-number (format "(%s): Enter Y coordinate: "
+                                            (or prompt "")) (or yd 0)))))
+      (list x y)))
+#+end_src
+* Wrapper functions for calibration
 #+begin_src emacs-lisp :tangle yes :results none
   (defun cart-calibrate ()
     "Conduct interactive calibration to set the `cart--XY_0sl' variable."
     (interactive)
     (read-char "Choose two points for calibration. Press any key to continue.")
-    (let* ((XY1 (cart--2dc "Point 1" 0 0))
-           (xy1 (save-excursion (cart--gmc "Click on Point 1")))
+    (let* ((cbuf (current-buffer))
+           (XY1 (cart--2dc "Point 1" 0 0))
+           (xy1 (save-excursion (cart--gmc "Click on Point 1" 2)))
            (XY2 (cart--2dc "Point 2" 1 1 (elt XY1 0) (elt XY1 1)))
-           (xy2 (save-excursion (cart--gmc "Click on Point 2")))
+           (xy2 (save-excursion (cart--gmc "Click on Point 2" 3)))
            (Xs (mapcar #'(lambda (x) (elt x 0)) (list XY1 XY2)))
            (Ys (mapcar #'(lambda (x) (elt x 1)) (list XY1 XY2)))
            (xs (mapcar #'(lambda (x) (elt x 0)) (list xy1 xy2)))
@@ -219,22 +293,23 @@
       (message "Calibration done!")
       (list XY1 XY2 xy1 xy2)))
 
-  (defun cart--gmp (&optional prompt)
+  (defun cart--gmp (&optional prompt gpers)
     "Prompt to click on frame and return the xy coordinates in drawing CS.
-  Identical to `cart--gmc' except for the fact that this subsequently transforms
-  the point(s) through a call to `cart--XY2xy'.
-  Two behaviors are possible: (if clicked) single point returned as a
-  list with the two coordinates; (if dragged) start and end points of
-  dragged region returned as a list of two point-lists (as above).
+      Identical to `cart--gmc' except for the fact that this subsequently transforms
+      the point(s) through a call to `cart--XY2xy'.
+      Two behaviors are possible: (if clicked) single point returned as a
+      list with the two coordinates; (if dragged) start and end points of
+      dragged region returned as a list of two point-lists (as above).
 
-  The optional parameter PROMPT allows one to specify a user-facing
-  prompt.  The prompt defaults to 'Click anywhere' if not provided."
-    (let ((XYs (cart--gmc prompt)))
+      The optional parameter PROMPT allows one to specify a user-facing
+      prompt.  The prompt defaults to 'Click anywhere' if not provided.
+      Second optional parameter GPERS is pass to cart--gmc."
+    (let ((XYs (cart--gmc prompt gpers)))
       (if (listp (elt XYs 0))
           (mapcar 'cart--XY2xy XYs)
         (cart--XY2xy XYs))))
 #+end_src
-** Wrapper functions for inserting a point, tikz-draw, tikz-node, etc.
+* Wrapper functions for inserting a point, tikz-draw, tikz-node, etc.
 #+begin_src emacs-lisp :tangle yes :results none
   (defun cart--fmt-point (xy)
     "Insert point as \"(<`cart--nfmt'>, <`cart--nfmt'>)\".
@@ -274,19 +349,20 @@
         (setq p0 (search-backward string bound noerror count)))
       p0))
 #+end_src
-*** Point Insertion
-#+begin_src emacs-lisp :tangle yes
-  (defun cart-insert-point (&optional prompt)
+** Point Insertion
+#+begin_src emacs-lisp :tangle yes :results none
+  (defun cart-insert-point (&optional prompt gpers)
     "Query for and insert clicked coordinates \"(x, y)\" at the current point.
 
-  Optional input parameter PROMPT allows setting the user-facing
-  prompt.   Defaults to \"Click on Point\"."
+     Optional input parameter PROMPT allows setting the user-facing
+     prompt.   Defaults to \"Click on Point\".
+     Parameter GPERS is sent to `cart--gmc` through `cart--gmp`. Defaults to 3."
     (interactive)
-    (let ((xy (cart--gmp prompt)))
+    (let ((xy (save-window-excursion (cart--gmp prompt (or gpers 3)))))
       (when xy (insert (cart--fmt-point xy)) t)))
 #+end_src
-*** Draw Insertion
-#+begin_src emacs-lisp :tangle yes
+** Draw Insertion
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart-tikz-draw (&optional dopts nopts)
     "Initiate a tikz \\draw and insert points sequentially.
   Start with prompting the user for draw options and common node options
@@ -302,10 +378,13 @@
   options respectively. The user receives prompts for populating these."
     (interactive "sDraw options: \nsNode options: ")
     (insert (format "\\draw%s " (cart--optbr dopts)))
-    (let ((ctflag nil))
-      (while (setq xys
-                   (cart--gmp
-                    "Click on a point/Click+Drag to include tangent (RET to stop insertion)"))
+    (let ((ctflag nil)
+          (cbuf (current-buffer)))
+      (while (setq xys (save-window-excursion
+                         (cart--gmp
+                          "Click on a point/Click+Drag to include tangent (RET to stop insertion)"
+                          1)))
+        (switch-to-buffer cbuf)
         (if ctflag
             (progn
               (if (numberp (elt xys 0))
@@ -326,6 +405,12 @@
                             " .. controls " (cart--fmt-point (elt xys 1))))
             (setq ctflag t)) )
         (unless ctflag (insert " -- ")))
+
+      (when cart--visual-feedback
+        (switch-to-buffer-other-frame cart--vis-buffer)
+        (delete-frame)
+        (setq cart--vis-buffer nil))
+
       (if (y-or-n-p "Insert first point in the end (manual closed path)?")
           (progn
             (cart--goto-begend)
@@ -344,8 +429,8 @@
       (insert ";")
       (do-auto-fill)))
 #+end_src
-*** Node Insertion
-#+begin_src emacs-lisp :tangle yes
+** Node Insertion
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart-tikz-node (&optional nopts nval)
     "Initiate a tikz \\node and insert value given by user.
   Start with prompting the user for node options and node value.
@@ -361,8 +446,8 @@
     (insert (format " \{%s\};" nval))
     (do-auto-fill))
 #+end_src
-*** Coordinates Insertion
-#+begin_src emacs-lisp :tangle yes
+** Coordinates Insertion
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart-tikz-coordinates (&optional dopts)
     "Initiate a tikz \\draw plot [smooth] and insert points.
   Start with prompting the user for draw options.  Format for the
@@ -375,8 +460,14 @@
     receives a prompt for populating these."
     (interactive "sDraw options: ")
     (insert (format "\\draw%s plot [smooth] coordinates {" (cart--optbr dopts)))
-    (while (cart-insert-point "Click on a point (RET to stop insertion)")
+    (while (cart-insert-point "Click on a point (RET to stop insertion)" 1)
       (insert " "))
+
+    (when cart--visual-feedback
+      (switch-to-buffer-other-frame cart--vis-buffer)
+      (delete-frame)
+      (setq cart--vis-buffer nil))
+
     (save-excursion
       (when (y-or-n-p "Closed path?")
         (progn
@@ -388,10 +479,10 @@
     (insert "};")
     (do-auto-fill))
 #+end_src
-*** Circle Insertion
-#+begin_src emacs-lisp :tangle yes
+** Circle Insertion
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart-tikz-circle (&optional dopts nopts)
-    "Initiate a tikz \\draw and insert a circle by choosing center & radii.
+    "Initiate a tikz \\draw and insert a circle by choosing 2 pts along circumference.
   Start with prompting the user for draw options and node options
   added after center point.  Format for the insertion is:
           \\draw[DOPTS] (x1, y1) NOPTS circle
@@ -404,9 +495,10 @@
   options respectively. The user receives prompts for populating these."
     (interactive "sDraw options: \nsNode options: ")
     (insert (format "\\draw%s " (cart--optbr dopts)))
-    (let ((xys1 (cart--gmp "Click and drag points along circumference")))
+    (let ((xys1 (cart--gmp "Click and drag (2) points along circumference" 3)))
       (when (numberp (elt xys1 0))  ;; only one point chosen
-        (setq xys1 (list xys1 (cart--gmp "Click the second point on circumference"))))
+        (setq xys1 (list xys1 (save-window-excursion
+                                (cart--gmp "Click the second point on circumference" 3)))))
 
       (insert
        (concat (cart--fmt-point
@@ -415,7 +507,7 @@
                (format (concat "circle[radius=" cart--nfmt "];")
                        (/ (cart--norm (cart--vecop '- (elt xys1 0) (elt xys1 1))) 2))))))
 #+end_src
-** Wrapper functions for modifying existing tikz commands (draw, node, coordinates)
+* Wrapper functions for modifying existing tikz commands (draw, node, coordinates)
 #+begin_src emacs-lisp :tangle yes :results none
   (defun cart--last-open-paren (&optional pos)
     "Return the last open paren that the current point lies in.
@@ -481,7 +573,7 @@
                   "\n" "" (buffer-substring p0 p1))
                  ",")))))
 #+end_src
-*** Translation
+** Translation
 #+begin_src emacs-lisp :tangle yes
   (defun cart--translate (&optional dxdy)
     "Conduct rigid body translation on current context.
@@ -516,10 +608,11 @@
   trget point."
     (interactive)
     (save-excursion
-      (let* ((xys (cart--gmp "Click & drag from start point to end point")))
+      (let* ((xys (save-excursion (cart--gmp "Click & drag from start point to end point" 3))))
         (when (numberp (elt xys 0))
-          (setq xys (list xys (cart--gmp
-                               "You had only clicked on one point. Please click target point now"))))
+          (message "%s" (numberp (elt xys 0)))
+          (setq xyn (save-excursion (cart--gmp "You had only clicked on one point. Please click target point now" 3)))
+          (setq xys (list xys xyn)))
 
         (let ((dxdy (cart--vecop '- (elt xys 1) (elt xys 0))))
           (if (region-active-p)
@@ -535,8 +628,8 @@
           (do-auto-fill)
           (widen)))))
 #+end_src
-*** Rotation
-#+begin_src emacs-lisp :tangle yes
+** Rotation
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart--rotate (&optional tht cpt rnds)
     "Conduct rigid body rotation on current context.
   The context is generated through narrow.  It is important for context
@@ -609,12 +702,12 @@
   exists, it is inserted."
     (interactive)
     (save-excursion
-      (let* ((xyref (or (cart--gmp "Click on the center of rotation (RET to use origin) ") '(0 0)))
-             (xys (cart--gmp "Click and drag the rotation target points "))
+      (let* ((xyref (or (save-window-excursion (cart--gmp "Click on the center of rotation (RET to use origin) " 1)) '(0 0)))
+             (xys (cart--gmp "Click and drag the rotation target points " 3))
              (rnds (y-or-n-p "Rotate node contents too?")))
         (when (numberp (elt xys 0))
           (setq xys (list xys (cart--gmp
-                               "You had only clicked on one point. Please click target point now"))))
+                               "You had only clicked on one point. Please click target point now" 3))))
 
         (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys))
 
@@ -633,8 +726,8 @@
           (do-auto-fill)
           (widen)))))
 #+end_src
-*** Scaling
-#+begin_src emacs-lisp :tangle yes
+** Scaling
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart--scale (&optional sc cpt snds)
     "Conduct scaling in the current context.
   The context is generated through narrow.  It is important for context
@@ -710,12 +803,12 @@
   exists, it is inserted."
     (interactive)
     (save-excursion
-      (let* ((xyref (or (cart--gmp "Click on the center of scaling (RET to use origin) ") '(0 0)))
-             (xys (cart--gmp "Click and drag the scaling target points "))
+      (let* ((xyref (or (save-window-excursion (cart--gmp "Click on the center of scaling (RET to use origin) " 1)) '(0 0)))
+             (xys (cart--gmp "Click and drag the scaling target points " 3))
              (snds (y-or-n-p "Scale node contents too?")))
         (when (numberp (elt xys 0))
           (setq xys (list xys (cart--gmp
-                               "You had only clicked on one point. Please click target point now"))))
+                               "You had only clicked on one point. Please click target point now" 3))))
         (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys)) ;; Relative Coordinates
 
         (let ((sc (apply '/ (reverse (mapcar 'cart--norm xys)))))
@@ -732,19 +825,19 @@
           (do-auto-fill)
           (widen)))))
 #+end_src
-** Wrapper functions for editing a selected point in a diagram
-*** Move point
-#+begin_src emacs-lisp :tangle yes
+* Wrapper functions for editing a selected point in a diagram
+** Move point
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart-tikz-move-point ()
     "Move a selected point to a selected target location."
     (interactive)
     (save-excursion
-      (let ((xys (cart--gmp "Select point and drag to target"))
+      (let ((xys (cart--gmp "Select point and drag to target" 3))
             (pt (point))
             (nrm 100)
             (mval 100))
         (when (numberp (elt xys 0))
-          (setq xys (list xys (cart--gmp "Only source point selected. Click the target point"))))
+          (setq xys (list xys (cart--gmp "Only source point selected. Click the target point" 3))))
 
         (LaTeX-narrow-to-environment)
         (goto-char (point-min))
@@ -761,14 +854,14 @@
         (insert (cart--fmt-point (elt xys 1)))
 
         (widen))))
-  #+end_src
-*** Delete point
-  #+begin_src emacs-lisp :tangle yes
+#+end_src
+** Delete point
+#+begin_src emacs-lisp :tangle yes :results none
   (defun cart-tikz-delete-point ()
     "Delete a selected point. EXPERIMENTAL. USE AT OWN RISK."
     (interactive)
     (save-excursion
-      (let ((xy (cart--gmp "Select point to delete"))
+      (let ((xy (cart--gmp "Select point to delete" 3))
             (pt (point))
             (nrm 100)
             (mval 100))
@@ -788,7 +881,7 @@
 
         (widen))))
 #+end_src
-** Footer
+* Footer
 #+begin_src emacs-lisp :tangle yes :results none
   (provide 'cart)
   ;;; cart.el ends here
